Add support for the new Crafter block