@@ -40,6 +40,6 @@ public class FurnaceRecipeData extends AbstractHighlightedRecipeData<AbstractFur
 
   @Override
   public boolean isEmpty() {
-    return this.getInput().get(0).isEmpty();
+    return this.getInput().getFirst().isEmpty();
   }
 }
